Fix Dream service feign validation and mapper issues